src/test/run-pass/macros/macro-nested_definition_issue-31946.rs
// run-pass
fn main() {
    println!("{}", {
        macro_rules! foo {
            ($name:expr) => { concat!("hello ", $name) }
        }
        foo!("rust")
    });
}
