src/test/compile-fail/unbalanced-comment.rs
// -*- rust -*-

// error-pattern: token

/*
 * This is an un-balanced /* multi-line comment.
 */

fn main() {
  log "hello, world.";
}
